--- a/index.html
+++ b/index.html
@@ -72,14 +72,13 @@
             <tr class="responsive-table__row">
                <td class="responsive-table__body__text responsive-table__body__text--name">Barat Jaina &amp; Barat Firta
                </td>
-               <td class="responsive-table__body__text responsive-table__body__text--country">2080-Magh-17, 01:00 PM |
-                  2080-Magh-18, 08:00 PM
+               <td class="responsive-table__body__text responsive-table__body__text--country">2080-Magh-17, 12:00 PM
                </td>
             </tr>
             <tr class="responsive-table__row">
                <td class="responsive-table__body__text responsive-table__body__text--name">Khaanpin(Pritibhoj)-</td>
-               <td class="responsive-table__body__text responsive-table__body__text--country">2080-Magh-18, 10:00 AM-
-                  06:00 PM
+               <td class="responsive-table__body__text responsive-table__body__text--country">2080-Magh-18, 10 AM-
+                  06 PM
                </td>
             </tr>
          </tbody>
