--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
          <div class="home_txt">
             <h3>Are getting married</h3>
             <p>
-               on <span class="date line">17 Magh 2080</span></29>, At <span class="place line">Dahit Pariwar</span>
+               on <span class="date line">17-18 Magh 2080</span></29>, At <span class="place line">Dahit Pariwar</span>
                Tikapur-9, Bauniya Kailali.
             </p>
          </div>
