--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <table class="responsive-table">
          <tbody class="responsive-table__body">
             <tr class="responsive-table__row">
-               <td class="responsive-table__body__text responsive-table__body__text--name">Deuli Darna -</td>
+               <td class="responsive-table__body__text responsive-table__body__text--name">Diuli Darna -</td>
                <td class="responsive-table__body__text responsive-table__body__text--country">2080-Magh-16, 06:30 PM
                </td>
             </tr>
