--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                </td>
             </tr>
             <tr class="responsive-table__row">
-               <td class="responsive-table__body__text responsive-table__body__text--name">Barat Jaina &amp; Barat Firta
+               <td class="responsive-table__body__text responsive-table__body__text--name">Baraat Jaina &amp; Baraat phirta
                </td>
                <td class="responsive-table__body__text responsive-table__body__text--country">2080-Magh-17, 12:00 PM
                </td>
