--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
          <a href="https://maps.app.goo.gl/7yPbb3yML3gLfrQb7" target="_blank">
             <div class="venue">SEE THE VENUE <i class='bx bx-right-arrow-alt'></i></div>
          </a>
-         <a href="invitation/anil.pdf" download="Invitation | 04 Dec | Hope to see you there!" target="_blank">
+         <a href="invitation/anil.pdf" download="Invitation | 17-18 Magh | Hope to see you there!" target="_blank">
             <div class="venue">DOWNLOAD INVITATION <i class='bx bx-right-arrow-alt'></i></div>
          </a>
 
