--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <meta property="og:title" content="Anil & Srijana's Wedding Celebration | Magh 17" />
    <meta property="og:description"
       content="With the divine grace of the almighty, inviting you and your family to Anil & Srijana's wedding to be held on Magh 17 at Dahit Pariwar, Tikapur-9 from 10:00 PM onwards." />
-   <meta property="og:image" content="assets/img/anil.png" />
+   <meta property="og:image" content="https://devphp3ramlaxman.github.io/anilwedding/assets/img/anil.png" />
    <meta property="og:site_name" content="Anil & Srijana's Wedding Celebration | Magh 17" />
    <meta name="twitter:card" content="website">
    <meta name="twitter:site" content="Anil & Srijana's Wedding Celebration | Magh 17">
@@ -24,7 +24,7 @@
    <meta name="twitter:description"
       content="With the divine grace of the almighty, inviting you and your family to Anil & Srijana's wedding to be held on Magh 17 at Dahit Pariwar, Tikapur-9 from 10:00 PM onwards.">
    <meta name="twitter:creator" content="@anildahit">
-   <meta name="twitter:image" content="assets/img/anil.png">
+   <meta name="twitter:image" content="https://devphp3ramlaxman.github.io/anilwedding/assets/img/anil.png">
 
    <title>Anil & Srijana's Wedding Celebration | Magh 17-18</title>
 
